tests/NormalTests/paczka2/big_fuzzy/92148388.err
Error in line 1: gYfSDA47 A235 74,7
Error in line 4: vUXz93UzxDO A235 16,4
Error in line 3: S515 S953 72,9
Error in line 28: S515 A235 55,1
Error in line 27: gYfSDA47 A235 48,4
Error in line 47: OBq S515 17,04
Error in line 44: 1N8J S515 16,0
Error in line 43: OBq S515 18,7
Error in line 68: elM8TDOcTG S953 78,9
Error in line 76: ZbbaWC6YiF S515 51,4
Error in line 66: 1N8J A391 47,5
Error in line 71: S515 S953 76,4
Error in line 96: elM8TDOcTG A391 7,1
Error in line 99: elM8TDOcTG A235 44,6
Error in line 106: elM8TDOcTG A391 96,2
Error in line 109: elM8TDOcTG S953 6,3
Error in line 122: gYfSDA47 A391 48,7
Error in line 119: ZbbaWC6YiF A391 60,2
Error in line 135: ZbbaWC6YiF A235 46,8
Error in line 143: OBq S515 8,5
Error in line 151: ZbbaWC6YiF A235 70,6
Error in line 156: S515 A391 22,5
Error in line 149: OBq A235 51,6
Error in line 170: ZbbaWC6YiF A391 25,3
Error in line 193: gYfSDA47 A391 65,5
Error in line 206: ZbbaWC6YiF A391 55,7
Error in line 219: vUXz93UzxDO S515 10,5
Error in line 225: gYfSDA47 A391 99,8
Error in line 228: vUXz93UzxDO A235 295,0
Error in line 222: 1N8J S515 29,0
Error in line 241: OBq S953 33,5
